adjusted: dark mode and responsive on error messages, also fixed: early return in SignIn.tsx

--- a/src/scss/container.scss
+++ b/src/scss/container.scss
@@ -18,6 +18,19 @@ main {
 @media (max-width: 800px){
   .content-container{
     padding: $global-pad;
+
   }
+
+
 }
 
+
+@media (max-width: 460px){
+  .content-container{
+ 
+   #no-employees-container{
+        max-width: 90%;
+    }
+  }
+
+}
