--- a/src/scss/notFound.scss
+++ b/src/scss/notFound.scss
@@ -6,8 +6,11 @@
 
   height: 100vh;
   width: 100vw;
-
-
+ @include dark-mode{
+   h1 {
+    color: $dark-text;
+   }  
+  }
 
 }
 
@@ -26,12 +29,24 @@
   @include search-home-btn;
 }
 
+  #no-employees-container {
+    border-radius: 6px;
+    @include flex(column, center, center);
+    padding: 2rem;
+    background-color: $white;
+  
+    h1 {
+      text-align: center;
+    }
 
+    @include dark-mode {
+      background-color: $dark-card;
+      border: 1px solid $dark-border;
+  
+      h1 {
+        color: $dark-text;
+      }
+    }
+  
+  }
 
-
-#no-employees-container {
-  @include flex(column, center, center);
-  padding: 2rem;
-  background-color: $white;
-
-}
