--- a/src/scss/user-detail.scss
+++ b/src/scss/user-detail.scss
@@ -274,7 +274,10 @@
   font-size: 4rem;
 
   opacity: 0.8;
-
+ 
+  @include dark-mode {
+    color: $white;
+  }
 
 }
 
